[gd_scene load_steps=2 format=3 uid="uid://1wtgrvyf3p0a"]

[ext_resource type="Script" path="res://Nodes/Menus/vehicle_info.gd" id="1_66b83"]

[node name="vehicle_info" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_66b83")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.702358, 0.844849, 0.721555, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="IconContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/IconContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.421872, 0.678129, 0.497733, 1)

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/IconContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VehicleIcon" type="TextureRect" parent="VBoxContainer/IconContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
stretch_mode = 5

[node name="LabelsContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/LabelsContainer"]
layout_mode = 2

[node name="NameContainer" type="HBoxContainer" parent="VBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelName" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Name:"
vertical_alignment = 1

[node name="LabelNameValue" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/NameContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 2
vertical_alignment = 1

[node name="CapacityContainer" type="HBoxContainer" parent="VBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelCapacity" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/CapacityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Capacity:"
vertical_alignment = 1

[node name="LabelCapacityValue" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/CapacityContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 2
vertical_alignment = 1

[node name="SpeedContainer" type="HBoxContainer" parent="VBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelSpeed" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Speed:"
vertical_alignment = 1

[node name="LabelSpeedValue" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/SpeedContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 2
vertical_alignment = 1

[node name="CostContainer" type="HBoxContainer" parent="VBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LabelCost" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/CostContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Cost:"
vertical_alignment = 1

[node name="LabelCostValue" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/CostContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 2
vertical_alignment = 1

[node name="PriceContainer" type="HBoxContainer" parent="VBoxContainer/LabelsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="LabelPrice" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/PriceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Price:"
vertical_alignment = 2

[node name="LabelPriceValue" type="Label" parent="VBoxContainer/LabelsContainer/VBoxContainer/PriceContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
horizontal_alignment = 2
vertical_alignment = 2
